--- a/src/app/dashboard/stundent/stundent.component.html
+++ b/src/app/dashboard/stundent/stundent.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="students.length == 0">
+    <p>No data found</p>
+</div>
 <div *ngFor="let student of students">
     <p>{{student.id}} - {{student.name}}</p>
 </div>
